# cv-ats

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: cleanup-report.md
docs/paper/: evidencerank.tex
docs/superpowers/plans/: 2026-07-17-chromadb.md  2026-07-17-evaluation-baselines-ablation.md  2026-07-17-remove-langgraph.md  2026-07-18-remove-baselines-ablation.md  2026-07-18-remove-chromadb-rag.md  2026-07-18-remove-paper-placeholders.md  2026-07-21-cv-extractor-reference-date.md  2026-07-21-hallucination-checker-spliced-quotes.md  2026-07-21-repo-cleanup.md
docs/superpowers/specs/: 2026-07-17-chromadb-design.md  2026-07-17-evaluation-baselines-ablation-design.md  2026-07-17-remove-langgraph-design.md  2026-07-18-remove-baselines-ablation-design.md  2026-07-18-remove-chromadb-rag-design.md  2026-07-18-remove-otel-langfuse-design.md  2026-07-18-remove-paper-placeholders-design.md  2026-07-21-cv-extractor-reference-date-design.md  2026-07-21-hallucination-checker-spliced-quotes-design.md  2026-07-21-repo-cleanup-design.md
jd/: machine_learning_engineer.txt
src/agents/: candidate_judge.py  cv_extractor.py  jd_parser.py  pool_calibrator.py  signal_enricher.py
src/data/: skill_taxonomy.json
src/evaluation/: ablation.py  baselines.py  calibration_metrics.py  consistency_runner.py  hallucination_checker.py  ranking_metrics.py
src/graph/: nodes.py  pipeline.py  state.py
src/models/: schemas.py
src/output/: report_generator.py
src/prompts/: calibrator.py  cv_extractor.py  jd_parser.py  judge.py  judge_no_grounding.py  signal_enricher.py
src/utils/: cache.py  embedder.py  llm.py  pdf_extractor.py  skill_matcher.py  skill_normalizer.py  skill_taxonomy.py  telemetry.py  vector_store.py
tests/: conftest.py  test_ablation.py  test_baselines.py  test_cache.py  test_calibration_metrics.py  test_candidate_judge.py  test_cv_extractor.py  test_hallucination_checker.py  test_jd_parser.py  test_judge_prompts.py  test_main_flags.py  test_pdf_extractor.py  test_pipeline.py  test_pipeline_ablation.py  test_pool_calibrator.py  test_ranking_metrics.py  test_report_generator.py  test_schemas.py  test_signal_enricher.py  test_skill_matcher.py  test_skill_normalizer.py  test_vector_store.py
