[project]
name = "langchain-langgraph-ats"
version = "0.1.0"
description = "LLM-powered ATS for IT candidate ranking — Q1 Scopus research"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.9",
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
    "pydantic>=2.11.7,<3.0",
    "pymupdf>=1.26.3",
    "pdfplumber>=0.11.10",
    "numpy>=1.26.4,<2.0",
    "scipy>=1.15.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.6.0",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "python-dotenv>=1.0.1",
    "langfuse>=4.12.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-exporter-otlp-proto-http>=1.43.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
